tests/baselines/reference/computedPropertyNames46_ES6.errors.txt
computedPropertyNames46_ES6.ts(2,6): error TS2870: This expression is always falsy. Did you mean to test something else?


==== computedPropertyNames46_ES6.ts (1 errors) ====
    var o = {
        ["" || 0]: 0
         ~~
!!! error TS2870: This expression is always falsy. Did you mean to test something else?
    };